# olegram

./: .gitignore  README.md  docker-compose.yml  gen_proto.sh
api-gateway/: Dockerfile  README.md  main.py  postservice_pb2.py  postservice_pb2_grpc.py  pyproject.toml  schemas.py  stats_pb2_grpc.py
docs/: diagram.c4  post-comment.plantuml  stats.plantuml  user.plantuml
post-comment-service/: Dockerfile  Makefile  README.md  main.py  postservice_pb2.py  pyproject.toml
post-comment-service/repositories/: base.py  schemas.py
post-comment-service/repositories/postgres/: models.py  repository.py
post-comment-service/tests/: __init__.py  conftest.py
post-comment-service/tests/unit/: test_repository.py
proto/: postservice.proto  stats.proto
stats-service/: 001_init.sql  Dockerfile  README.md  main.py  pyproject.toml  stats_pb2.py
tests/: conftest.py
tests/e2e/: conftest.py  test_full_flow.py
tests/kafka/: test_kafka_events.py
tests/unit/post_service/: conftest.py  test_post_methods.py
tests/unit/stats_service/: conftest.py  test_stats_methods.py
tests/unit/user_service/: conftest.py  test_user_rest.py
user-service/: Dockerfile  README.md  main.py  pyproject.toml  token_service.py
user-service/repositories/: base.py  schemas.py
user-service/repositories/postgres/: models.py  repository.py
user-service/tests/: conftest.py
user-service/tests/unit/: test_profile_routes.py  test_repository.py  test_user_routes.py
user-service/web/: dependencies.py
user-service/web/routes/: profile.py  user.py
